header mobile e efeitos nos itens de menu

--- a/index.html
+++ b/index.html
@@ -15,21 +15,25 @@
 </head>
 
 <body>
-  <header class="header flex mw-1160 m-0-auto p-32">
-    <a href="./index.html"><img src="./img/bikcraft.svg" alt="Logo Bikcraft" srcset=""></a>
-    <nav>
-      <ul class="header-menu flex gap-40">
-        <li class="header-menu-item">
-          <a class="header-menu-item-link" href="">Bicicletas</a>
-        </li>
-        <li class="header-menu-item">
-          <a class="header-menu-item-link" href="">Seguros</a>
-        </li>
-        <li class="header-menu-item">
-          <a class="header-menu-item-link" href="">Contato</a>
-        </li>
-      </ul>
-    </nav>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./">
+        <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
+      </a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li>
+            <a href="">Bicicletas</a>
+          </li>
+          <li>
+            <a href="">Seguros</a>
+          </li>
+          <li>
+            <a href="">Contato</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 </body>
 
