Minha intro com mobile sem foto com efeito de estouro

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
       </nav>
     </div>
   </header>
+  <main class="intro-bg">
+    <div class="intro">
+      <article>
+        <h1 class="titulo">Bicicletas feitas
+          sob medida<span class="p1">.</span>
+        </h1>
+        <p class="texto-1">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicletas.html" class="btn-1">Selecione a sua</a>
+      </article>
+      <img src="./img/fotos/introducao.jpg" alt="Foto Bicicleta">
+    </div>
+  </main>
 </body>
 
 </html>
