--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <p class="texto-1">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html" class="btn-1">Selecione a sua</a>
       </article>
-      <img src="./img/fotos/introducao.jpg" alt="Foto Bicicleta">
+      <div class="intro-img">
+        <img src="./img/fotos/introducao.jpg" alt="Foto Bicicleta">
+      </div>
     </div>
   </main>
 </body>
