--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="intro">
       <article>
         <h1 class="titulo">Bicicletas feitas
-          sob medida<span class="p1">.</span>
+          sob medida<span>.</span>
         </h1>
         <p class="texto-1">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html" class="btn-1">Selecione a sua</a>
@@ -49,6 +49,35 @@
       </div>
     </div>
   </main>
+  <section class="escolha-bg">
+    <div class="escolha">
+      <h2 class="titulo">escolha a sua<span>.</span></h2>
+    </div>
+    <ul class="galeria">
+      <li class="galeria-item">
+        <div class="content-img">
+          <img src="./img/bicicleta/nimbus1.jpg" alt="">
+        </div>
+        <h3>Magic Might</h3>
+        <span>R$ 2499</span>
+      </li>
+      <li class="galeria-item">
+        <div class="content-img">
+          <img src="./img/bicicleta/nimbus2.jpg" alt="">
+        </div>
+
+        <h3>Nimbus Stark</h3>
+        <span>R$ 4999</span>
+      </li>
+      <li class="galeria-item">
+        <div class="content-img">
+          <img src="./img/bicicleta/nimbus3.jpg" alt="">
+        </div>
+        <h3>Nebula Cosmic</h3>
+        <span>R$ 3999</span>
+      </li>
+    </ul>
+  </section>
 </body>
 
 </html>
