--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
   <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -41,7 +40,7 @@
         <h1 class="titulo">Bicicletas feitas
           sob medida<span>.</span>
         </h1>
-        <p class="texto-1">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <p class="texto-1 font-2-r-m">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html" class="btn-1">Selecione a sua</a>
       </article>
       <div class="intro-img">
