section tecnologia done

--- a/index.html
+++ b/index.html
@@ -77,6 +77,36 @@
       </li>
     </ul>
   </section>
+  <article class="tecnologia-bg ">
+    <div class="tecnologia max-w-1200 m0-auto col-2">
+      <div class="tecnologia-content">
+        <span class=" legenda font-2-m-m">Tecnologia Avançada</span>
+        <h1 class="titulo">você escolhe as suas cores e componentes<span class="cor-p1">.</span></h1>
+        <p class="texto-1 font-2-r-m ">
+          Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.
+        </p>
+        <a class="font-1-sb-m " href="">Escolha um modelo</a>
+        <div class="tecnologia-lista-container">
+          <ul class="lista-tec">
+            <li class="item-lista-tec">
+              <h3 class="font-1-m-sm">Motor Elétrico</h3>
+              <p class="font-2-r-n">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+            </li>
+            <li class="item-lista-tec">
+              <h3 class="font-1-m-sm">Rastreador</h3>
+              <p class="font-2-r-n">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="tecnologia-img">
+        <img src="/img/fotos/tecnologia.jpg" alt="">
+      </div>
+    </div>
+  </article>
+  <section class="parceiros max-w-1200 m0-auto">
+    <h1 class="titulo">nossos parceiros <span class="p1">.</span></h1>
+  </section>
 </body>
 
 </html>
