page home, falta detalhes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -106,7 +107,106 @@
   </article>
   <section class="parceiros max-w-1200 m0-auto">
     <h1 class="titulo">nossos parceiros <span class="p1">.</span></h1>
+    <ul class="paceiros-galeria ">
+      <li><img src="./img/parceiros/caravan.svg" alt=""></li>
+      <li><img src="./img/parceiros/ranek.svg" alt=""></li>
+      <li><img src="./img/parceiros/handel.svg" alt=""></li>
+      <li><img src="./img/parceiros/dogs.svg" alt=""></li>
+      <li><img src="./img/parceiros/lescone.svg" alt=""></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt=""></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt=""></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt=""></li>
+    </ul>
+  </section>
+  <section class="depoimentos">
+    <div class="depoimentos-img">
+      <img src="img/fotos/depoimento.jpg" alt="">
+    </div>
+    <div class="depoimentos-texto">
+      <div class="container-texto">
+        <p class="merriweather-black-italic">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+        <cite class="font-1-sb-m ">Ana Júlia</cite>
+      </div>
+    </div>
+  </section>
+  <section class="seguros-bg">
+    <div class="seguros max-w-1200 m0-auto ">
+      <h2 class="titulo">Seguros<span>.</span></h2>
+      <div class="cards col-2">
+        <div class="card menor">
+          <div class="card-header">
+            <h3 class="card-titulo">Prata</h3>
+            <div class="card-header-preco">
+              <span class="card-preco">R$ 199</span>
+              <span class="card-tempo">mensal</span>
+            </div>
+          </div>
+          <ul class="card-list">
+            <li>Duas trocas por ano</li>
+            <li>Assistência técnica</li>
+            <li>Suporte 08h às 18h</li>
+            <li>Cobertura estadual</li>
+          </ul>
+          <a href="" class="btn-1 dark">INSCREVA-SE</a>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-titulo p1">Ouro</h3>
+            <div class="card-header-preco">
+              <span class="card-preco">R$ 299</span>
+              <span class="card-tempo">mensal</span>
+            </div>
+          </div>
+          <ul class="card-list">
+            <li>Cinco trocas por ano</li>
+            <li>Assistência especial</li>
+            <li>Suporte 24h</li>
+            <li>Cobertura nacional</li>
+            <li>Desconto em parceiros</li>
+            <li>Acesso ao Clube Bikcraft</li>
+          </ul>
+          <a href="" class="btn-1">INSCREVA-SE</a>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
+<footer class="footer-bg">
+  <div class="footer max-w-1200 m0-auto">
+    <div class="footer-main">
+      <div class="footer-main-img">
+        <img src="./img/bikcraft.svg" alt="">
+      </div>
+      <div class="footer-contatos">
+        <h4 class="footer-titulo">contato</h4>
+        <div class="footer-contatos-1">
+          <a href="tel:+55 21 9999-9999">+55 21 9999-9999</a>
+          <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
+        </div>
+        <div class="footer-contatos-2">
+          <span>Rua Ali Perto, 42 - Botafogo</span>
+          <span>Rio de Janeiro - RJ</span>
+        </div>
+        <div class="footer-sociais">
+          <img src="./img/redes/instagram.svg" alt="">
+          <img src="./img/redes/facebook.svg" alt="">
+          <img src="./img/redes/youtube.svg" alt="">
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h4 class="footer-titulo">Informações</h4>
+        <div class="footer-links">
+          <a href="./bicicletas.html">Bicicletas</a>
+          <a href="./seguros.html">Seguros</a>
+          <a href="./contatos.html">Contato</a>
+          <a href="./termos-condicoes.html">Termos e Condições</a>
+        </div>
+      </div>
+    </div>
+    <div class="rodape">
+      <p>Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </div>
+</footer>
 
 </html>
